--- a/home/css/home.css
+++ b/home/css/home.css
@@ -31,15 +31,18 @@ html {
 /* CSS */
 
 header {
-    display: flex; 
+    display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
 }
 
-#aeros-laptop {
-    width: 100%; 
-    height: 35rem;
-    margin: 1rem;
+#banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 99%; 
+    height: 19rem;
+    margin: 10px; 
     border-radius: 10px;
 }
 
@@ -68,11 +71,12 @@ h2 {
 .cards {
     display: flex;
     gap: 1rem;
+    font-size: 12px;
 }
 
 #travel-img {
-    height: 350px;
-    width: 300px;
+    height: 210px;
+    width: 200px;
     border-radius: 1rem;    
     transition: transform 0.5s;
 }
@@ -82,3 +86,54 @@ h2 {
     cursor: pointer;
 }
 
+.bem-avaliados-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    font-size: 12px;
+    gap: 2rem;
+}
+
+.national-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    font-size: 12px;
+    gap: 1rem;   
+}
+
+footer {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif; 
+    font-size: 20px;
+    margin-top: 3rem;
+    margin-bottom: 6rem;
+}
+
+@media (max-width: 910px) {
+    #banner {
+        height: 10rem;
+    }
+
+    .cards {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .bem-avaliados-cards {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .national-cards {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    footer {
+        font-size: 18px;
+    }
+}
